# obstacle_detector

./: .gitignore  CMakeLists.txt  README.md  package.xml  plugin_description.xml
include/: kalman.h  math_utilities.h  obstacle_detector.h  obstacle_detector_panel.h  obstacle_publisher.h  obstacle_recorder.h  obstacle_tracker.h  obstacle_visualizer.h  scans_merger.h  scans_merger2.h  tracked_obstacle.h  virtual_obstacle_publisher.h  virtual_obstacle_publisher_panel.h
include/figures/: circle.h  figure_fitting.h  point.h  segment.h  tracked_obstacle.h
include/panels/: obstacle_detector_panel.h  obstacle_publisher_panel.h  obstacle_recorder_panel.h  obstacle_tracker_panel.h  scans_merger_panel.h
include/utilities/: figure_fitting.h  kalman.h  math_utilities.h  point_set.h  tracked_obstacle.h
launch/: asd.launch  qwe.launch  single_scanner.launch  two_scanners.launch  virtual_obstacles.launch  virtual_scanner.launch
msg/: CircleObstacle.msg  SegmentObstacle.msg  TrackedObstacle.msg  TrackedObstacles.msg
resources/: obstacle_detector.rviz  opti_tf_publisher.cpp
src/: obstacle_detector.cpp  obstacle_detector_panel.cpp  obstacle_publisher.cpp  obstacle_recorder.cpp  obstacle_tracker.cpp  obstacle_visualizer.cpp  scans_merger.cpp  scans_merger2.cpp  virtual_obstacle_publisher.cpp  virtual_obstacle_publisher_panel.cpp
src/panels/: obstacle_detector_panel.cpp  obstacle_publisher_panel.cpp  obstacle_recorder_panel.cpp  obstacle_tracker_panel.cpp  scans_merger_panel.cpp
